--- a/about-hitsz.html
+++ b/about-hitsz.html
@@ -20,9 +20,22 @@
     </script>
 </head>
 <body class="bg-gray-50">
-    <!-- Navigation (Same as other pages) -->
     <nav class="bg-white shadow-md p-4">
-        <!-- [Previous Navigation Code] -->
+        <div class="container mx-auto flex justify-between items-center">
+            <div class="flex items-center">
+                <img src="/api/placeholder/50/50" alt="Schident Logo" class="mr-4">
+                <h1 class="text-2xl font-bold text-hitsz-blue">Schident</h1>
+            </div>
+            <div class="space-x-6">
+                <a href="index.html" class="text-gray-800 hover:text-hitsz-blue">Home</a>
+                <a href="programs.html" class="text-gray-800 hover:text-hitsz-blue">Programs</a>
+                <a href="requirements.html" class="text-gray-800 hover:text-hitsz-blue">Requirements</a>
+                <a href="about-hitsz.html" class="text-gray-800 hover:text-hitsz-blue">About HITSZ</a>
+                <button onclick="navigateTo('application-form.html')" class="bg-hitsz-red text-white px-4 py-2 rounded-full">
+                    Apply Now
+                </button>
+            </div>
+        </div>
     </nav>
 
     <div class="container mx-auto py-16 px-4">
